# amplify-pipeline-mcp

./: .claude  .gitignore  AUTO_FIX_FEATURES.md  CLAUDE_CODE_GUIDE.md  COMPLETE_USAGE_GUIDE.md  FEATURE_ROADMAP.md  LICENSE  QUICK_START.md  README.md  deployment_detector.py  deployment_monitor.py  example-usage.md  pyproject.toml  run_server.sh  server.py  server_original.py  test_auto_fix.py  test_fixes.py  workflow_template_old.py  workflow_templates.py
.github/workflows/: amplify-pipeline-main.yml
docs/: INDEX.md
examples/: adding-tests.md  auto-fix-scenarios.md  basic-setup.md  notifications-setup.md
scripts/: add-features.sh
templates/: notifications.yml  performance-checks.yml  test-runner.yml
