[project]
name = "amplify-pipeline-mcp"
version = "1.0.0"
description = "MCP server for managing AWS Amplify custom CI/CD pipelines"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
amplify-pipeline-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"